--- a/setup.yaml
+++ b/setup.yaml
@@ -1,21 +1,15 @@
 users:
-  - name: springbootweb
-    password: $POSTGRESQL_SPRINGBOOTWEB_PASSWORD
+  - name: keycloak
+    password: $POSTGRESQL_KEYCLOAK_PASSWORD
     role: superuser
 databases:
-  - name: springbootweb
-    owner: springbootweb
+  - name: keycloak
+    owner: keycloak
     tablespace:
       - name: tb1
         location: /appz/data/tb1
     schemas:
       - name: schema1
-        authorised_user: springbootweb
+        authorised_user: keycloak
         search_path: true
-restore:
-  - database: springbootweb
-    source:
-      url: 'https://www.ecloudcontrol.com/wp-content/uploads/2021/06/accountsdb-springboot.sql_.zip'
-    user: springbootweb
-    password: $POSTGRESQL_SPRINGBOOTWEB_PASSWORD
-    token: 20210625-0350
+
